--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   mobx: ^2.0.0
   flutter_mobx: ^2.0.0
 
+  provider: ^5.0.0
+
   # Utils
   equatable: ^2.0.0
 
@@ -78,6 +80,10 @@ dependencies:
 
   # plugin provides an API for querying information about an application package.
   package_info_plus: ^1.0.3
+
+  sensors_plus: ^1.0.2
+
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
