--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,6 +105,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following section is specific to Flutter.
 flutter:
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
